# SimpleClient

./: CMakeLists.txt
consoleclient/: CMakeLists.txt  consoleclient.cpp
src/: CMakeLists.txt  SimpleClient.cpp  SimpleClient.h
